// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated";
option java_outer_classname = "RouteGuideProto";
option objc_class_prefix = "RTG";

package routeguide;

service RouteGuide {
  rpc SenderTest1(Msg1) returns (Msg2) {}
  rpc UpdateFollower(UpdateNewRideMessage) returns(Id){}
  rpc UpdateRelevantCities(UpdateNewRideMessage) returns (Id){}
}

message RideProto {
  string firstName = 1;
  string lastName = 2;
  string phoneNumber = 3;
  string origin = 4;
  string destination = 5;
  string departure_date = 6;
  int32 vacancies = 7;
  float pd = 8;
}

message UpdateNewRideMessage{
  RideProto ride = 1;
}
message Id{
  string rideId = 1;
}

message Msg1 {
  int32 a = 1;
  int32 b = 2;
}

message Msg2 {
  int32 c = 1;
}